# ChEMBL_dataAcquisition

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  constraints.txt  mypy.ini  output.csv  output.csv.bak  output2.csv  output21.csv  output251.csv  output2511.csv  output25111.csv  output251131.csv  output251131_data_correlation_report_table.csv  output251131_quality_report_table.csv  output2_isoforms.csv  output3.csv  output31_isoforms.csv  output5.csv  output_assay2_20250916.csv  output_assay2_20250916.csv.meta.yaml  output_assay2_20250916_data_correlation_report_table.csv  output_input_20250917.json  output_tissue_20250917.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chembl2uniprot/: __main__.py  config.py  config.schema.json  mapping.py
chembl2uniprot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: documents.yaml
data/: run.bat
data/input/: activity2.csv  assay2.csv  document1.csv  output.activities.csv  output.activities.csv.meta.yaml  output.activities_data_correlation_report_table.csv  output.activities_quality_report_table.csv  output_all_document1_20250916.csv  output_all_document1_20250916.csv.meta.json  target.csv  testitem2.csv
data/output/: final_targets.csv  final_targets.csv.meta.yaml  final_targets_quality_report_table.csv  out.csv.meta.json  output.activities.csv  output.activities.csv.meta.yaml  output.activities_data_correlation_report_table.csv  output.activities_quality_report_table.csv  output.activity_all_data_correlation_report_table.csv  output.activity_all_quality_report_table.csv  output.assay.csv.meta.yaml  output.assay_all.csv.meta.yaml  output.assay_all_quality_report_table.csv  output.assay_data_correlation_report_table.csv  output.assay_quality_report_table.csv  output.document_20250920.csv.meta.json  output.document_20250920_data_correlation_report_table.csv  output.document_20250920_quality_report_table.csv  output.document_crossreff.csv  output.document_crossreff.csv.meta.json  output.document_shcolar.csv  output.document_shcolar.csv.meta.json  output.testitem.csv  output.testitem.csv.meta.yaml  output.testitem_all.csv.meta.yaml  (+7 more)
docs/: README.md  STRUCTURE.md  USAGE.md  chembl_tissue.md  configuration.md
output.csv/: targets.csv  targets_interactions.csv  targets_synonyms.csv
schemas/: config.schema.json  default_config.yaml  hgnc_config.yaml
scripts/: __init__.py  _path_utils.py  check_dependency_versions_main.py  check_determinism.py  chembl2uniprot_main.py  chembl_activities_main.py  chembl_assays_main.py  chembl_testitems_main.py  chembl_tissue_main.py  data_profiling_main.py  dump_gtop_target.py  get_cell_line_main.py  get_hgnc_by_uniprot.py  get_target_data_main.py  get_uniprot_target_data.py  iuphar_main.py  pipeline_targets_main.py  protein_classify_main.py  pubmed_main.py  uniprot_enrich_main.py  update_constraints_main.py  validation_benchmark_main.py
stubs/: _path_utils.pyi
tests/: __init__.py  conftest.py  fixtures.py  test_chembl2uniprot_cli.py  test_chembl2uniprot_library.py  test_chembl2uniprot_mapping.py  test_chembl_activities_pipeline.py  test_chembl_assays_pipeline.py  test_chembl_cell_lines.py  test_chembl_client.py  test_chembl_targets.py  test_chembl_testitems_main.py  test_chembl_testitems_pipeline.py  test_chembl_tissue_client.py  test_chembl_tissue_main.py  test_cli.py  test_cli_common.py  test_cli_logging_redaction.py  test_config.py  test_config_validation.py  test_data_profiling.py  test_dependency_tools.py  test_dump_gtop_target_cli.py  test_get_cell_line_main.py  test_get_target_data_cli.py  test_get_uniprot_target_data.py  test_gtop.py  test_hgnc_client.py  test_http_client.py  test_io_utils.py  test_isoforms.py  test_iuphar.py  test_logging.py  test_mapping.py  test_metadata.py  test_metadata_clients.py  test_normalize_activities_performance.py  test_orthologs.py  test_path_utils.py  test_pipeline_targets.py  (+17 more)
(+57 files in other folders)
