[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chembl2uniprot"
version = "0.1.0"
description = "Map ChEMBL IDs to UniProt IDs"
authors = [{name = "AutoGen", email = "noreply@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "PyYAML",
    "jsonschema",
    "pandas",
    "pydantic>=2.0",
    "requests",
    "requests-cache",
    "tenacity",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests-mock",
    "black",
    "ruff",
    "mypy",
    "pydantic>=2.0",
    "pandas-stubs",
    "types-PyYAML",
    "types-jsonschema",
    "types-requests",
    "hypothesis",
]

[project.scripts]
chembl-activities = "scripts.chembl_activities_main:main"
chembl-assays = "scripts.chembl_assays_main:main"
chembl-testitems = "scripts.chembl_testitems_main:main"
chembl-tissue = "scripts.chembl_tissue_main:main"
chembl2uniprot = "scripts.chembl2uniprot_main:main"
check-determinism = "scripts.check_determinism:main"
data-profiling = "scripts.data_profiling_main:main"
dump-gtop-target = "scripts.dump_gtop_target:main"
get-cell-line = "scripts.get_cell_line_main:main"
get-hgnc-by-uniprot = "scripts.get_hgnc_by_uniprot:main"
get-target-data = "scripts.get_target_data_main:main"
get-uniprot-target-data = "scripts.get_uniprot_target_data:main"
iuphar = "scripts.iuphar_main:main"
pipeline-targets = "scripts.pipeline_targets_main:main"
protein-classify = "scripts.protein_classify_main:main"
pubmed = "scripts.pubmed_main:main"
uniprot-enrich = "scripts.uniprot_enrich_main:main"
update-constraints = "scripts.update_constraints_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["library*", "scripts*"]

[tool.setuptools.package-data]
library = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

